--- a/.github/workflows/update-image.yml
+++ b/.github/workflows/update-image.yml
@@ -1,12 +1,16 @@
 name: Update Daily Image
 
 on:
+  workflow_dispatch:
   schedule:
     - cron: '0 0 * * *'  # Every day at midnight UTC
 
 jobs:
   update-image:
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: write
 
     steps:
       - name: Checkout repository
@@ -27,7 +31,10 @@ jobs:
           fi
 
       - name: Commit changes (if a new image is added)
+        env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # ✅ Use GitHub-provided token
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          git diff --quiet || (git commit -am "Updated image for $TODAY" && git push)
+          git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}.git
+          git diff --quiet || (git commit -am "Updated image for $TODAY" && git push origin main)
